--- a/plantinintegration/src/style.css
+++ b/plantinintegration/src/style.css
@@ -1,32 +1,954 @@
+html {
+  box-sizing: border-box;
+  overflow-x: hidden;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-
-a:hover {
-  color: #535bf2;
+  --fs-sm: clamp(0.8rem, 0.17vi + 0.76rem, 0.89rem);
+  --fs-base: clamp(1rem, 0.34vi + 0.91rem, 1.19rem);
+  --fs-md: clamp(1.25rem, 0.61vi + 1.1rem, 1.58rem);
+  --fs-lg: clamp(1.56rem, 1vi + 1.31rem, 2.11rem);
+  --fs-xl: clamp(1.95rem, 1.56vi + 1.56rem, 2.81rem);
+  --fs-xxl: clamp(2.44rem, 2.38vi + 1.85rem, 3.75rem);
+  --fs-xxxl: clamp(3.05rem, 3.54vi + 2.17rem, 5rem);
+  --border-radius: 0.5em;
 }
 
 body {
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: rgba(248, 245, 236, 1);
+  width: 100%;
   margin: 0;
+  overflow-x: hidden;
+}
+
+.hidden {
+  display: none;
+}
+
+
+.logo {
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  justify-content: center;
+  align-items: center;
+  margin-left: 8em;
+}
+
+canvas {
+  background-image: url("./assets/old-book-open-dark-wood-background.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: block;
+  margin: 0 auto;
+  width: 550px;
+}
+
+@media screen and (min-width: 60em) {
+  canvas {
+    width: 60%;
+  }
+
+}
+
+
+.hero_image {
+  background-image: url("./assets/phone_responsive.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  object-fit: contain;
+  height: 400px;
+  background-size: cover;
+  margin-bottom: 15em;
+}
+
+.hero_image h1 {
+  font-family: "IM Fell French Canon SC", serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: var(--fs-lg);
+  text-transform: uppercase;
+  display: flex;
+  justify-content: center;
+  width: min-content;
+  padding-top: 3em;
+  padding-left: 2.2em;
+}
+
+.hero_image p {
+  font-family: "Inder", serif;
+  font-size: var(--fs-base);
+  color: rgba(30, 47, 116, 1);
+  width: 12em;
+  margin-top: 10em;
+  margin-left: 3.5em;
+}
+
+.hero_image img {
+  margin-top: -13em;
+  margin-left: -1.5em;
+  animation: scrollAnimation 1.5s ease-in-out infinite;
+}
+
+@keyframes scrollAnimation {
+  0% {
+    transform: translateY(0);
+  }
+
+  50% {
+    transform: translateY(1em);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@media screen and (min-width: 48em) {
+  .hero_image h1 {
+    padding-left: 7em;
+
+  }
+}
+
+@media screen and (min-width: 60em) {
+  .hero_image {
+    background-image: url("./assets/desktop_responsive.png");
+    background-position: left 5em top 0em;
+    background-repeat: no-repeat;
+    object-fit: contain;
+    height: 500px;
+  }
+
+  .hero_image h1 {
+    font-size: var(--fs-xxxl);
+    padding-left: 5em;
+    padding-top: 1.2em;
+  }
+
+  .hero_image p {
+    margin-left: 21em;
+    margin-top: -3em;
+    width: 30%;
+
+  }
+
+  .hero_image img {
+    margin-top: -17em;
+    margin-left: -2em;
+  }
+}
+
+.arow {
+  position: absolute;
+  top: 120%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.who_is {
+  margin: 1em;
+}
+
+.who_is h1,
+.who_is h2,
+.who_is h3 {
+  font-family: "IM Fell French Canon SC", serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: var(--fs-lg);
+  text-transform: uppercase;
+  color: rgba(165, 28, 48, 1);
+  margin-top: -1em;
+}
+
+.who_is p,
+.new_beggining_section p,
+.learn_section p,
+.building_section p,
+.guess_section p,
+.visit_section p {
+  font-family: "Inder", serif;
+  font-size: var(--fs-base);
+  color: rgba(30, 47, 116, 1);
+  border-left: 2px dashed rgba(30, 47, 116, 1);
+  padding-left: 0.5em;
+}
+
+
+
+@media screen and (min-width: 60em) {
+
+  .who_is div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .who_is h1 {
+    margin-left: -10em;
+  }
+
+  .who_is h2 {
+    margin-left: -6em;
+  }
+
+  .who_is h3 {
+    margin-left: 6em;
+  }
+
+  .who_is p {
+    width: 40%;
+    display: flex;
+    justify-content: center;
+    margin-left: 32.5em;
+    border: none;
+    margin-top: -1em;
+  }
+
+  .who_is img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -10em;
+  }
+
+
+}
+
+.one_night_section {
+  /* position: relative; */
+  background-color: rgba(30, 47, 116, 1);
+  border-top-left-radius: 170px;
+  margin-bottom: -1.5em;
+  /* Round the top-left corner */
+  border-top-right-radius: 170px;
+  padding-bottom: 12em;
+  background-image: url("./assets/antwerp.png"), url("./assets/eye.png"), url("./assets/clouds_onenight_phone.png");
+  background-position: center, center top 25%, center top -90%;
+  background-repeat: no-repeat, no-repeat;
+  height: 180vb;
+
+}
+
+
+
+.one_night_section h1 {
+  /* position: absolute; */
+  font-family: "IM Fell French Canon SC", serif;
+  font-size: var(--fs-lg);
+  padding-top: 3em;
+  display: flex;
+  justify-content: center;
+  color: rgba(248, 245, 236, 1);
+}
+
+.one_night_section h2 {
+  /* position: absolute; */
+  display: flex;
+  justify-content: center;
+  margin-top: -0.2em;
+  font-family: "Lora", serif;
+  font-size: 120px;
+  color: rgba(215, 40, 42, 1);
+}
+
+.one_night_image {
+  margin-top: -18em;
+  width: 320px;
+}
+
+.eye {
+  margin-top: -24em;
+}
+
+.one_night_section_text {
+  font-family: "Inder", serif;
+  font-size: var(--fs-base);
+  color: rgba(248, 245, 236, 1);
+  margin-left: 1em;
+  padding-bottom: 3em;
+  width: 18em;
+}
+
+.one_night_section_text p {
+  margin-bottom: 1.5em;
+}
+
+@media screen and (min-width: 48em) {
+
+  .one_night_section_text :nth-child(1) {
+    border-left: 2px dashed rgba(248, 245, 236, 1);
+    font-size: var(--fs-base);
+    padding-left: 0.5em;
+    margin-left: 1em;
+    width: 90%;
+  }
+
+  .one_night_section_text :nth-child(2) {
+    border-left: 2px dashed rgba(248, 245, 236, 1);
+    font-size: var(--fs-base);
+    padding-left: 0.5em;
+    margin-left: 27em;
+    width: 90%;
+
+  }
+
+  .one_night_section {
+    border-top-left-radius: 370px;
+    border-top-right-radius: 370px;
+  }
+
+}
+
+@media screen and (min-width: 60em) {
+  .one_night_section h1 {
+    font-size: var(--fs-xl);
+  }
+
+  .one_night_section h2 {
+    font-size: 160px;
+  }
+
+
+
+  .one_night_section {
+    border-top-left-radius: 970px;
+    border-top-right-radius: 970px;
+    background-position: center top 45%, center top 70%, center top -10%;
+    height: 140vb;
+
+  }
+
+  .one_night_section_text :nth-child(1) {
+    border-left: 2px dashed rgba(248, 245, 236, 1);
+    font-size: var(--fs-base);
+    padding-left: 0.5em;
+    margin-left: 5em;
+    width: 90%;
+  }
+
+  .one_night_section_text :nth-child(2) {
+    border-left: 2px dashed rgba(248, 245, 236, 1);
+    font-size: var(--fs-base);
+    padding-left: 0.5em;
+    margin-left: 52em;
+    width: 90%;
+  }
+
+}
+
+
+
+.attack_section {
+  background-color: rgba(30, 47, 116, 1);
+  width: 100%;
+
+}
+
+.footprint {
+  margin-left: -6em;
+  margin-top: -3em;
+}
+
+.attack_section_text {
+  display: flex;
+  justify-self: center;
+  text-align: center;
+  font-family: "Inder", serif;
+  font-size: var(--fs-base);
+  color: rgba(248, 245, 236, 1);
+  width: 12em;
+  padding-top: 20em;
+  padding-bottom: 20em;
+  transform-origin: center;
+}
+
+.attack_section p {
+  font-family: "Inder", serif;
+  font-size: var(--fs-base);
+  color: rgba(248, 245, 236, 1);
+  display: flex;
+  justify-self: center;
+  margin-bottom: 3em;
+  width: 15em;
+  text-align: center;
+}
+
+.arrow {
+  margin-left: -2em;
+  margin-bottom: -1em;
+}
+
+@media screen and (min-width: 60em) {
+  .arrow {
+    width: 100%;
+    margin-left: 0em;
+
+  }
+
+  .printing-press {
+    width: 35%;
+    margin-top: -20em;
+    opacity: 0.4;
+  }
+
+}
+
+
+.new_beggining_section {
+  width: 100%;
+  margin: 1em;
+}
+
+.new_beggining_section h1 {
+  font-family: "IM Fell French Canon SC", serif;
+  font-size: var(--fs-xl);
+  text-transform: uppercase;
+  color: rgba(165, 28, 48, 1);
+}
+
+.new_beggining_section h2 {
+  font-family: "IM Fell French Canon SC", serif;
+  font-size: var(--fs-lg);
+  text-transform: uppercase;
+  margin-left: 2.7em;
+  margin-top: -1.4em;
+  color: rgba(165, 28, 48, 1);
+}
+
+.new_beggining_section p {
+  width: 90%;
+}
+
+@media screen and (min-width: 60em) {
+  .new_beggining_section h1 {
+    display: flex;
+    justify-content: center;
+    margin-left: -6.5em;
+
+  }
+
+  .new_beggining_section h2 {
+    display: flex;
+    justify-content: center;
+  }
+
+  .new_beggining_section p {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    border: none;
+    width: 30%;
+    margin: 0 auto;
+  }
+
+  .clouds {
+    margin-top: -20em;
+    margin-left: -5em;
+  }
+
+}
+
+.clouds {
+  width: 110%;
+}
+
+.learn_section {
+  width: 100%;
+  margin: 1em;
+  margin-bottom: 7em;
+  margin-top: 10em;
+}
+
+.learn_section h1 {
+  font-family: "IM Fell French Canon SC", serif;
+  font-size: var(--fs-xl);
+  text-transform: uppercase;
+  color: rgba(165, 28, 48, 1);
+}
+
+.learn_section h2 {
+  font-family: "IM Fell French Canon SC", serif;
+  font-size: var(--fs-lg);
+  text-transform: uppercase;
+  margin-left: 4.2em;
+  margin-top: -1.4em;
+  color: rgba(165, 28, 48, 1);
+}
+
+.learn_section img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+@media screen and (min-width: 60em) {
+  .learn_section h1 {
+    display: flex;
+    justify-content: center;
+    margin-left: -6.5em;
+
+  }
+
+  .learn_section h2 {
+    display: flex;
+    justify-content: center;
+    margin-left: 7em;
+  }
+
+  .learn_section p {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    width: 30%;
+    margin: 0 auto;
+  }
+
+}
+
+.books_section {
+  width: 100%;
+  margin-top: -10em;
+  margin-bottom: 2em;
+  padding: 10em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-image: url("./assets/books_clouds.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+}
+
+.books_section p {
+  font-family: "Inria Serif", serif;
+  font-size: var(--fs-lg);
+
+  color: rgba(165, 28, 48, 1);
+}
+
+.books_one {
+
+  text-transform: uppercase;
+}
+
+.books_two,
+.books_six {
+  margin-top: -0.7em;
+}
+
+.books_three {
+  margin-top: -0.7em;
+  margin-left: 3em;
+}
+
+.books_four {
+  margin-top: -0.7em;
+  margin-left: 7em;
+}
+
+.books_five {
+  margin-top: -0.7em;
+  margin-left: 3.5em;
+}
+
+.books_section img {
+  display: flex;
+  justify-content: center;
+  width: 170%;
+  margin-left: 3em;
+}
+
+.books_section div {
+  margin: 1em 0;
+}
+
+.books_section div img {
+  display: block;
+  margin: 0 auto;
+  width: 100%;
+}
+
+@media screen and (min-width: 60em) {
+
+  .books_section {
+    padding: 32em;
+  }
+
+  .split_books {
+    display: flex;
+    justify-content: center;
+    margin-top: -30em;
+    width: 90%;
+  }
+
+  .books_section p {
+    font-size: var(--fs-xl);
+  }
+
+  .books_section {
+    margin-top: 10em;
+    margin-bottom: 15em;
+  }
+
+  .books_one {
+    margin-left: -13em;
+    text-transform: uppercase;
+  }
+
+  .books_section img {
+    margin-left: 17em;
+  }
+
+}
+
+.building_section {
+  margin: 1em;
+}
+
+.building_section h1 {
+  font-family: "IM Fell French Canon SC", serif;
+  font-size: var(--fs-lg);
+  text-transform: uppercase;
+  color: rgba(165, 28, 48, 1);
+}
+
+.building_section h2 {
+  font-family: "IM Fell French Canon SC", serif;
+  font-size: var(--fs-lg);
+  text-transform: uppercase;
+  margin-left: 5.2em;
+  margin-top: -1em;
+  color: rgba(165, 28, 48, 1);
+}
+
+.building_block div p:first-child {
+  padding-bottom: 1em;
+}
+
+@media screen and (min-width: 60em) {
+  .building_block {
+    display: flex;
+    flex-direction: row-reverse;
+  }
+
+  .building_section h1 {
+    display: flex;
+    justify-content: center;
+    margin-left: -6.5em;
+
+  }
+
+  .building_section h2 {
+    display: flex;
+    justify-content: center;
+    margin-left: 5.5em;
+  }
+
+  .building_section p {
+    width: 53%;
+    margin: 0 auto;
+  }
+
+  .building_image {
+    width: 100%;
+  }
+}
+
+.papers {
+  position: absolute;
+  margin-top: 6em;
+  margin-left: -15em;
+}
+
+.books {
+  width: 100%;
+  margin-left: -5em;
+}
+
+@media screen and (min-width: 60em) {
+  .books {
+    margin-left: -20em;
+    margin-top: -5em;
+  }
+
+  .building_block div {
+    margin-top: 8em;
+    margin-left: -10em;
+  }
+
+}
+
+
+.guess_section {
+  margin: 1em;
+  margin-top: -6em;
+}
+
+.guess_section h1 {
+  display: flex;
+  justify-content: center;
+  margin-left: -8em;
+  font-family: "IM Fell French Canon SC", serif;
+  font-size: var(--fs-lg);
+  text-transform: uppercase;
+  color: rgba(165, 28, 48, 1);
+}
+
+.guess_section h2 {
+  display: flex;
+  justify-content: center;
+  font-family: "IM Fell French Canon SC", serif;
+  font-size: var(--fs-lg);
+  text-transform: uppercase;
+  margin-left: 3.3em;
+  margin-top: -1.2em;
+  color: rgba(165, 28, 48, 1);
+}
+
+.guess_section p {
+  margin-bottom: 2em;
+}
+
+.guess_section img {
+  margin-top: -11em;
+  margin-left: 8em;
+}
+
+.feedback {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 2em;
+  border: none;
+}
+
+.interaction_section {
+  margin-top: 3em;
+  padding: 1em;
+  border-top: 2px solid rgba(30, 47, 116, 1);
+  border-bottom: 2px solid rgba(30, 47, 116, 1);
+  /* Line style */
+  margin: 20px 0;
+  /* Add spacing */
+  width: 100%;
+  /* Line width */
+}
+
+.interaction_section p {
+  font-family: "Inria Serif", serif;
+  font-weight: 700;
+  font-style: italic;
+  font-size: var(--fs-md);
+  color: rgba(165, 28, 48, 1);
+  border: none;
+}
+
+.interaction_section button {
+  background-color: rgba(30, 47, 116, 1);
+  color: rgba(248, 245, 236, 1);
+  font-family: "Inder", serif;
+  border-radius: 5px;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+.interaction_section button:active,
+.interaction_section button.clicked {
+  background-color: transparent;
+  color: rgba(30, 47, 116, 1);
+  border: 2px solid rgba(30, 47, 116, 1);
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+  margin-top: 2em;
+  margin-bottom: 1em;
+  gap: 1em;
+  flex-wrap: wrap;
+}
+
+.buttons button {
+  flex: 1 1 calc(50% - 2em);
+  max-width: calc(50% - 2em);
+}
+
+@media screen and (min-width: 60em) {
+  .guess_section {
+    margin-top: -20em;
+    margin-bottom: 30em;
+  }
+
+  .guess_text {
+    width: 40%;
+    border: none;
+    margin-bottom: 3em;
+  }
+
+  .guess_section p {
+    margin: 0 auto;
+    border: none;
+    padding: 2em;
+  }
+
+  .interaction_section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 50%;
+    margin: 0 auto;
+  }
+
+  .guess_section img {
+    width: 60%;
+    margin-top: -15em;
+    margin-right: -20em;
+    float: right;
+  }
+}
+
+.vision_section {
+  margin: 1em;
+  margin-top: -10em;
+  margin-bottom: 7em;
+
+
+}
+
+.vision_section img {
+  margin-left: -12.7em;
+  margin-top: -20em;
+}
+
+.vision_section p {
+  font-family: "IM FELL French Canon SC", serif;
+  font-size: var(--fs-md);
+  color: rgba(165, 28, 48, 1);
+}
+
+.vision_one {
+  opacity: 0;
+  transform: translateY(30px);
+  margin-left: 0em;
+}
+
+.vision_two {
+  opacity: 0;
+  transform: translateY(30px);
+  margin-left: 2em;
+}
+
+.vision_three {
+  opacity: 0;
+  transform: translateY(30px);
+  margin-left: 7em;
+}
+
+.vision_four {
+  opacity: 0;
+  transform: translateY(30px);
+  margin-left: 12em;
+}
+
+.visit_section {
+  margin-top: 3em;
+  background-image: url("./assets/footer.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+
+
+.visit_section h1 {
+  font-family: "IM Fell French Canon SC", serif;
+  font-size: var(--fs-xl);
+  text-transform: uppercase;
+  color: rgba(165, 28, 48, 1);
+}
+
+.visit_section h2 {
+  font-family: "IM Fell French Canon SC", serif;
+  font-size: var(--fs-lg);
+  text-transform: uppercase;
+  margin-left: 4.5em;
+  margin-top: -1.4em;
+  color: rgba(165, 28, 48, 1);
+}
+
+.visit_section button {
+  background-color: rgba(30, 47, 116, 1);
+  color: rgba(248, 245, 236, 1);
+  font-family: "Inder", serif;
+  border-radius: 5px;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  display: block;
+  margin: 0 auto;
+  margin-top: 2em;
+}
+
+.visit_section button:active,
+.visit_section button.clicked {
+  background-color: transparent;
+  color: rgba(30, 47, 116, 1);
+  border: 2px solid rgba(30, 47, 116, 1);
+}
+
+.visit_section img {
+  width: 110%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media screen and (min-width: 60em) {
+
+  .visit_section {
+    background-image: url("./assets/footer_desktop.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    padding: 13.5em;
+
+  }
+
+  .visit_section h1 {
+    display: flex;
+    justify-content: center;
+    margin-left: -5em;
+    padding-top: -5em;
+
+  }
+
+  .visit_section h2 {
+    display: flex;
+    justify-content: center;
+  }
+
+  .visit_section p {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    border: none;
+    width: 35%;
+    margin: 0 auto;
+  }
+
+
 }
